if dark mode fix

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 :root{
-    --background-color: #fafafa;
+    --background-color: #fafafa !important;
     --text-color: #010001;
 }
 *{
     /* border: 1px solid red; */
     scroll-behavior: smooth;
     transition: 0.3s ease-in-out;
+    
   }
 header {
     color: var(--text-color);
@@ -20,6 +21,8 @@ header {
   }
   body{
     background-image: url('https://images.unsplash.com/photo-1500145588304-deb802b4af76?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80');
+    color: black !important;
+    
   }
   nav ul {
     list-style: none;
@@ -33,7 +36,7 @@ header {
   }
   
   nav a {
-    color: var(--text-color);
+    color: black !important;
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 3px;
@@ -41,7 +44,7 @@ header {
   
   nav a:hover {
     cursor: pointer;
-    background-color: #dfdfdf;
+    background-color: #dfdfdf !important;
 }
 
 #home{
